--- a/src/App.scss
+++ b/src/App.scss
@@ -23,3 +23,12 @@ html { /* stylelint-disable-line */
 img { /* stylelint-disable-line */
   max-width: 100%;
 }
+
+/*
+@import "item";
+@import "heading";
+@import "lecture";
+@import "/Filter/filter/filters";
+@import "list";
+@import "listItem";
+*/
